2005-06-03  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: fixed 'embedded' target.

2005-06-02  Reinhard Max  <max@suse.de>

	* unix/tkUnix.c (Tk_GetUserInactiveTime): Improvements to get it
	working on Solaris, and panic if we run out of memory.
	* unix/configure.in: Rework the searching for Xss, to make it work
	on Solaris and provide more useful output. Use AC_HELP_STRING
	where appropriate.
	* unix/tcl.m4: synced from Tcl.
	* unix/configure: regenerated with autoconf 2.59.
	
2005-06-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinInt.h: added private decls of Tk_GetEmbeddedMenuHWND,
	Tk_GetMenuHWND, TkWinCleanupContainerList, and TkpWmGetState to
	that are used across source files.

	* win/tkWinX.c (Tk_ResetUserInactiveTime): cast to squelch
	compiler warning.

2005-05-31  Reinhard Max  <max@suse.de>

	* doc/Inactive.3 (new file): C level API documentationn for
	TIP#245 (Tk_GetUserInactiveTime, Tk_ResetUserInactiveTime).
	* tests/tk.test: Added tests for the TIP#245 implementation.

2005-05-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkPanedWindow.c, tests/panedwindow.test: batch of fixes
	to panedwindow from Daniel South.  Improved auto-size to fit
	internal windows, fixed sash placement at edge of pane, fixed
	calculation of stretch amount for internal windows.
	[Bug 1124198 1161543 1054117 1010941 795869 690169 1192323]

	* generic/tkMenu.c (MenuCmd): create event handler earlier to
	ensure proper destruction of menu through DestroyNotify.
	[Bug 1159367]

	* library/console.tcl (::tk::ConsoleInit): print out first prompt
	and swallow the extra "% " that comes once from Tcl on Windows.

2005-05-29  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXFont.c: use Tcl_Panic instead of panic.
	
	* unix/configure.in: added description of HAVE_XSS for autoheader.
	* unix/configure: autoconf-2.59
	* unix/tkConfig.h.in: autoheader-2.59

	* macosx/Wish.pbproj/project.pbxproj: