@@ -1,3 +1,14 @@
+2005-06-02  Jim Ingham  <jingham@apple.com>
+
+	        Another patch from M. Kirkham.
+
+	        * macosx/tkMacOSXScrlbr.c (ThumbActionProc, ScrollBarBindProc):
+	        Record the first mouse down point, and compute differences from
+	        that, rather than getting the mouse down each time through the
+	        loop.  The old method would get fooled if you moved the mouse less
+	        than a text line height in the text widget.
+	        [Bug 1083728]
+
 2005-06-03  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/Makefile: fixed 'embedded' target.
